# fedora-security-hardening-toolkit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  security_audit.py  security_fixes_20250707_221546.sh  security_fixes_20250707_222004.sh  security_fixes_20250707_222559.sh  security_fixes_20250707_223238.sh  security_fixes_20250707_224230.sh  security_hardening.sh  security_ux_completion_prompt.txt  security_validation.sh  setup.py  tox.ini  validate_production_ready.sh
.github/workflows/: ci.yml  dependency-review.yml
scripts/: setup-dev-env.sh
tests/: __init__.py  test_security_audit.py
